# DiceCalculator

./: CMakeLists.txt  CMakePresets.json  DiceCalculator.cpp  DiceCalculator.h  vcpkg.json
app/: CMakeLists.txt  main.cpp
app/DiceCalculator/Controllers/: ExpressionEvaluationController.cpp  ExpressionEvaluationController.h
app/DiceCalculator/Ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
app/DiceCalculator/Ui/Widgets/: DiceExpressionBlock.cpp  DiceExpressionBlock.h  DiceExpressionBlock.ui  DiceExpressionInput.cpp  DiceExpressionInput.h  DiceExpressionInput.ui  DistributionGraph.cpp  DistributionGraph.h  PlotHoverTooltip.h
app/QCustomPlot/: CMakeLists.txt
public/DiceCalculator/: Combination.h  Distribution.h  IRandom.h  StdRandom.h
public/DiceCalculator/Evaluation/: CombinationAstVisitor.h  ConvolutionAstVisitor.h  DiceAstVisitor.h  DistributionAstVisitor.h  RollAstVisitor.h
public/DiceCalculator/Expressions/: ConstantNode.h  DiceAst.h  DiceNode.h  OperatorNode.h
public/DiceCalculator/Logging/: LogManager.h
public/DiceCalculator/Operators/: Addition.h  Advantage.h  AttackRoll.h  Comparison.h  DiceOperator.h  IRegistry.h  OperatorRegistry.h  Registry.h  Subtraction.h
public/DiceCalculator/Parsing/: BoostSpiritParser.h  IParser.h
src/: CMakeLists.txt
src/DiceCalculator/: Dummy.cpp  StdRandom.cpp
src/DiceCalculator/Evaluation/: CombinationAstVisitor.cpp  ConvolutionAstVisitor.cpp  DistributionAstVisitor.cpp  RollAstVisitor.cpp
src/DiceCalculator/Expressions/: ConstantNode.cpp  DiceNode.cpp  OperatorNode.cpp
src/DiceCalculator/Logging/: LogManager.cpp
src/DiceCalculator/Operators/: Addition.cpp  Advantage.cpp  AttackRoll.cpp  Comparison.cpp  Subtraction.cpp
src/DiceCalculator/Parsing/: BoostSpiritParser.cpp
test/: CMakeLists.txt
test/DiceCalculator/: DistributionTest.cpp  Dummy.cpp  TestUtilities.h
test/DiceCalculator/Evaluation/: CombinationAstVisitorTest.cpp  ConvolutionAstVisitorTest.cpp  DistributionAstVisitorTest.cpp  RollAstVisitorTest.cpp  TestUtilities.h
test/DiceCalculator/Expressions/: DiceAstTest.cpp
test/DiceCalculator/Parsing/: BoostSpiritParserTest.cpp
